aligning fixes

--- a/assignments/lesson6/styles/main-6.css
+++ b/assignments/lesson6/styles/main-6.css
@@ -21,7 +21,7 @@ header h1 {
     font-size: 3em;
 }
 
-header > h1, h2{
+header > h1, header > h2{
     text-align: left;
     margin-left: 225px;
 }
